--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
-name = "scyllapy"
+name = "aioscylla"
+version = "0.0.1"
 description = "Async scylla driver for python"
 requires-python = ">=3.8,<4"
 readme = "README.md"
